fix encoding in post request body (#179)
* fix encoding in post request body

* add neutral query with special characters

* add usage of StandardCharsets

* get workerType from class shorthand

* remove workerType constructor parameter